<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbarMAps"
        android:background="@color/purple_700">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maps_checkin_app"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        map:layout_constraintBottom_toTopOf="@+id/linearLayout"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.0"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/toolbarMAps"
        tools:context=".MapsActivity" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        android:weightSum="2"
        map:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:layout_weight="1"
            android:text="@string/check_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            android:textStyle="bold"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintStart_toStartOf="parent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkin_history"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:onClick="intentonclick"
            android:textStyle="bold"
            android:background="@color/white"
            android:layout_weight="1"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toEndOf="@+id/button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>